--- a/client/src/components/navbar/navbar.less
+++ b/client/src/components/navbar/navbar.less
@@ -3,9 +3,14 @@
 .navbar {
   display: flex;
   height: 50px;
-  justify-content: center;
+  padding: 0 50px;
+  align-items: center;
   background-color: white;
   width: 100%;
+
+  &__box {
+    display: flex;
+  }
 
   &__header {
     margin-left: 10px;
@@ -14,7 +19,6 @@
   }
 
   &__login {
-    margin-left: auto;
     margin-right: 20px;
   }
 }
@@ -22,5 +26,6 @@
 .container {
   width: 1140px;
   display: flex;
+  justify-content: space-between;
   align-items: center;
 }
